[gd_scene load_steps=11 format=3 uid="uid://bnslxl7aespoi"]

[ext_resource type="Script" path="res://GameElements/defense/fire_turret.gd" id="1_drxgk"]
[ext_resource type="Texture2D" uid="uid://bgc3f84exvidv" path="res://Assets/Shadow.png" id="2_f473n"]
[ext_resource type="Shader" path="res://Shaders/sokpop.gdshader" id="3_7balj"]
[ext_resource type="Texture2D" uid="uid://dubvh5jsaaofj" path="res://Shaders/normal.jpg" id="4_uulmc"]
[ext_resource type="Texture2D" uid="uid://cjdxklv31tt8u" path="res://Assets/Defense/turret_fire.png" id="5_knxkh"]
[ext_resource type="Texture2D" uid="uid://b5v7ycymulj75" path="res://Assets/Map/bande1.png" id="6_gnph3"]
[ext_resource type="AudioStream" uid="uid://dv443nca3ianr" path="res://Assets/audio/randomFire.tres" id="7_fbkgf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_crnf5"]
shader = ExtResource("3_7balj")
shader_parameter/strength = 0.015
shader_parameter/speed = 6.0
shader_parameter/frames = 6
shader_parameter/flowMap = ExtResource("4_uulmc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyh6e"]
size = Vector2(21, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ejl3"]
size = Vector2(26, 31)

[node name="Turret" type="Node2D"]
modulate = Color(0.223529, 0.745098, 1, 0.545098)
position = Vector2(386, 196)
script = ExtResource("1_drxgk")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(-5, -0.999994)
rotation = 1.5708
scale = Vector2(0.282802, 0.367638)
texture = ExtResource("2_f473n")

[node name="Turret" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_crnf5")
position = Vector2(-4, -2)
rotation = 1.57079
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_knxkh")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
unique_name_in_owner = true
z_index = 1
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_eyh6e")

[node name="ShootZone" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(3, 0)
scale = Vector2(0.56, 0.56)
collision_mask = 3
monitorable = false

[node name="ShootingZoneSprite" type="Sprite2D" parent="ShootZone"]
unique_name_in_owner = true
modulate = Color(0, 0.796078, 0.290196, 0.784314)
position = Vector2(30.5175, -1.00019)
rotation = -1.57079
scale = Vector2(0.26737, 0.327277)
texture = ExtResource("6_gnph3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShootZone"]
position = Vector2(-76.7427, -7.27177e-06)
scale = Vector2(14.6793, 2.96205)
polygon = PackedVector2Array(12.9191, 22.2819, 12.9191, -23.2947, 1.48119, -0.337601)

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-5, -1)
scale = Vector2(1.09297, 1)

[node name="TimerShoot" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(3, 0)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, -1)
shape = SubResource("RectangleShape2D_1ejl3")
debug_color = Color(0.755894, 0.189016, 1, 0.42)

[node name="FireAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_fbkgf")
volume_db = 0.8
pitch_scale = 2.24
bus = &"SFX"

[connection signal="body_exited" from="ShootZone" to="." method="_on_shoot_zone_body_exited"]
[connection signal="timeout" from="TimerShoot" to="." method="_on_timer_shoot_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
